syntax = "proto3";
package CIS.InternalServices.NotificationService.v2;
option csharp_namespace = "CIS.InternalServices.NotificationService.v2";

import "Messages/Types.proto";

message SendSmsRequest {
	EmailAddress From = 1;
	repeated EmailAddress To = 2;
	repeated EmailAddress Bcc = 3;
	repeated EmailAddress Cc = 4;
	EmailAddress ReplyTo = 5;
	string Subject = 6;
	EmailContent Content = 7;
	repeated EmailAttachment Attachments = 8;
	Identifier Identifier = 9;
	google.protobuf.Int64Value CaseId = 9;
	google.protobuf.StringValue CustomId = 10;
	google.protobuf.StringValue DocumentId = 11;
	DocumentHash DocumentHash = 12;
}
